--- a/server/build.gradle
+++ b/server/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile('org.postgresql:postgresql')
     compile('com.twilio.sdk:twilio:7.11.0')
     compile('org.springframework.boot:spring-boot-starter-websocket')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.mobile:spring-mobile-device')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
