--- a/webclient/package.json
+++ b/webclient/package.json
@@ -7,6 +7,11 @@
     "css-loader": "^0.28.1",
     "elm-webpack-loader": "^4.3.1",
     "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.5-beta.2",
+    "less": "^2.7.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "sockjs": "^0.3.18",
     "stompjs": "^2.3.3",
     "style-loader": "^0.17.0",
