--- a/webclient/package.json
+++ b/webclient/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "client": "webpack-dev-server --port 3000"
+    "client": "webpack-dev-server --port 3000 --host 0.0.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0"
