Initial webpacker / elm setup

--- a/ruby-server/.gitignore
+++ b/ruby-server/.gitignore
@@ -17,9 +17,14 @@
 !/log/.keep
 !/tmp/.keep
 
+/elm-stuff
 /node_modules
 /yarn-error.log
 
 .byebug_history
 
 .idea/
+/public/packs
+/public/packs-test
+/elm-stuff
+/node_modules
