--- a/ruby-server/Gemfile
+++ b/ruby-server/Gemfile
@@ -39,6 +39,8 @@ gem 'twilio-ruby', '~> 5.6.0'
 
 gem 'oj', '~> 3.3.9'
 
+gem 'webpacker', '~> 3.2'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
