--- a/ruby-server/Gemfile
+++ b/ruby-server/Gemfile
@@ -35,7 +35,7 @@ gem 'jbuilder', '~> 2.5'
 
 gem 'devise', '~> 4.3.0'
 
-gem 'twilio-ruby', '~> 5.6.0'
+gem 'nexmo', '~> 4.8.0'
 
 gem 'oj', '~> 3.3.9'
 
